# dusk

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: ci-tests.yaml
dusk/: __init__.py  cli.py  errors.py  front.py  grammar.py  integration.py  match.py  script.py  semantics.py  test.py  transpile.py  util.py
dusk/ir/: annotatable.py  ast_list.py  concept.py  loc.py  pyast.py  traversal.py  type_checking.py
dusk/passes/: constant_folder.py  enrich_pyast.py  pipeline.py  resolve_globals.py  symbol_resolution.py  tree.py
dusk/script/: __init__.py  internal.py  math.py  stubs.py
tests/: conftest.py  test_cli.py  test_domain.py  test_util.py
tests/examples/: interpolation_sph.py  laplacian_fd.py  laplacian_fvm.py  nh_diffusion.py  nh_diffusion_fvm.py  test_examples.py
tests/stencils/: test_copy.py  test_fields.py  test_globals.py  test_horizontal_domains.py  test_math.py  test_reduce.py  test_simple.py  test_sparse_fill.py  test_vertical_index_fields.py
