[metadata]
name = dusk
version = "0.5.0"
author = MeteoSwiss
author_email = "Benjamin.Weber@MeteoSwiss.ch"
description = "An eDSL front-end for Numerical Weather Prediction dynamical cores"
keywords = dawn, SIR, eDSL, DSL, NWP, dycore, ICON
license_file = LICENSE
url = "https://github.com/dawn-ico/dusk"

[options]
python_requires = ~= 3.8
packages = find:
install_requires =
  dawn4py@git+https://github.com/MeteoSwiss-APN/dawn.git#subdirectory=dawn

[options.entry_points]
console_scripts =
  dusk = dusk.cli:main
